# data_engineering_etl_pipeline

./: .gitignore  README.md  pyproject.toml
src/ufo_data_etl/etl_pipeline/: constant.py  data_cleanup.py  explore_and_data_cleanup.py  extract.py  file_cleanup.py
tests/unit/: test_extract.py
ufo_data_etl/src/: constant.py
